--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^13.1.0"
+    "joi": "^13.1.0",
+    "pug": "^3.0.2"
   }
 }
