--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^13.1.0",
+    "joi": "^13.0.1",
+    "mongoose": "^5.12.3",
     "pug": "^3.0.2"
   }
 }
